<resources>
    <string name="app_name">Volleyball Referee</string>
    <string name="bt1">Create a game</string>
    <string name="bt2">Previous Games</string>
    <string name="barra" translatable="false">/</string>
    <string name="uno" translatable="false">1</string>
    <string name="dos" translatable="false">2</string>
    <string name="cero" translatable="false">0</string>
    'traduir'
    <string name="capitan" translatable="false">Captain</string>
    <string name="genero">Gender</string>
    'traduir'
    <string name="mixte" translatable="false">Mixte</string>
    'traduir'
    <string name="masculi" translatable="false">Masculi</string>
    'traduir'
    <string name="femeni" translatable="false">Femeni</string>
    'traduir'
    <string name="captian_required" translatable="false">The Captain is required</string>
    'traduir'
    <string name="genere_required" translatable="false">The Gender is required</string>
    <string name="btsiguiente">Start match</string>
    'traduir'
    <string name="Name" translatable="false">Name</string>
    <string name="num1" translatable="false">1</string>
    <string name="num2" translatable="false">2</string>
    'traduir'
    <string name="imatge_platja" translatable="false">Imatge platja</string>
    <string-array name="generes">
        <item>Mixte</item>
        <item>Femeni</item>
        <item>Masculi</item>
    </string-array>
    <string-array name="capita">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="a_b">
        <item>A</item>
        <item>B</item>
    </string-array>
    'traduir'
    <string name="cara" translatable="false">Cara</string>
    'traduir'
    <string name="creu" translatable="false">Creu</string>
    'traduir'
    <string name="sorteig" translatable="false">Sorteo</string>
    'traduir'
    <string name="seguent" translatable="false">Siguiente</string>
    'traduir'
    <string name="equipA" translatable="false">Team A</string>
    'traduir'
    <string name="equipB" translatable="false">Team B</string>
    'traduir'
    <string name="saqueA" translatable="false">Jugador al Saque A</string>
    'traduir'
    <string name="saqueB" translatable="false">Jugador al Saque B</string>
    'traduir'
    <string name="primerarbitre" translatable="false">Primer àrbitre</string>
    'traduir'
    <string name="segonarbitre" translatable="false">Segon àrbitre</string>
    'traduir'
    <string name="anotador" translatable="false">Anotador</string>
    'traduir'
    <string name="lloc" translatable="false">Lloc</string>
    'traduir'
    <string name="hora" translatable="false">Hora</string>
    'traduir'
    <string name="selectTime" translatable="false">Select time</string>
    'traduir'
    <string name="pista" translatable="false">Pista</string>
    'traduir'
    <string name="guanyador" translatable="false">Guanyador:</string>
    'traduir'
    <string name="canviDeCamp" translatable="false">Canvi De Camp</string>

    <string-array name="numeros" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
    <string name="saque" translatable="false">Saque</string>
    <string name="finalDeSet" translatable="false">Final de set</string>

</resources>